# soda-sim-remote-ctrl

./: .gitignore  README.md  pyproject.toml
examples/: ChangeFullscreenMode.py  ChangeKeyInput.py  FindObjectByName.py  GetCalibrations.py  LevelList.py  LoadLevelFromSlot.py  MoveObjectOnScene.py  OpenLevel.py  QuitGame.py  ScenarioPlay.py  SetInputADMode.py  SetSensorParam.py  SetVehiclePosition.py  SpawnVehicleFromAddress.py  SpawnVehicleFromClass.py  ToggleSensor.py  __MoveObjectOnScene.py  __NonRealtime.py  __Screenshot.py  __SetSensorParam.py  __SetSensorParam2.py  __SetVehiclePosition.py  __SpawnAndSaveActor.py  __ToggleSensor.py  __UploadVehicleJson.py  __VehicleClassesAndSlots.py
soda_sim_remote_ctrl/: Simulator.py  SodaVehicle.py  UE4API.py
soda_sim_remote_ctrl/UObject/: UObject.py  UObjectMethod.py  UObjectPropertyGetter.py  UObjectPropertySetter.py  __init__.py
