[tool.poetry]
name = "soda_sim_remote_ctrl"
version = "0.2.1"
description = ""
authors = ["Ivan Zhukov <ivan@soda.auto>"]

[tool.poetry.dependencies]
python = "^3.8.1"
aiohttp = "^3.8.3"

[tool.poetry.dev-dependencies]
pylint = "^2.15.7"
numpy = "^1.23.5"
black = "^22.8.0"
pandas = "^1.2.4"
flake8 = "^6.0.0"
pytest = "^7.1.3"
requests = "^2.28.1"
pytest-asyncio = "^0.20.2"
async-timeout = "^4.0.2"
keyboard = "^0.13.5"
opencv-python = "^4.6.0.66"
matplotlib = "^3.6.2"
pyzmq = "^24.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
